# umami-preprocessing

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  changelog.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml  requirements.txt  reweight.py  search.json  sitemap.xml  zensical.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker_build.yml  docs-preview-cleanup.yml  docs.yml  pre-commit.yml  test.yml  testing.yml
configuration/: index.html
contributing/: index.html
docker/: Dockerfile
docs/: configuration.md  contributing.md  docs_development.md  index.md  requirements.txt  reweighting.md  run.md  sampling.md  setup.md  umami_int.md
jetpp/: logger.py  main.py  utils.py
jetpp/classes/: components.py  cuts.py  misc.py  preprocessing_config.py  resampling_config.py  variable_config.py
jetpp/configs/: flavours.yaml  single-b.yaml  test.yaml  variables.yaml  xbb-variables.yaml  xbb.yaml
jetpp/hdf5/: __init__.py  h5reader.py  h5utils.py  h5writer.py
jetpp/stages/: hist.py  merging.py  normalisation.py  plot.py  resampling.py  vds.py
pr-144/: index.html
pr-144/configuration/: index.html
pr-144/setup/: index.html
pr-150/: 404.html
pr-150/docs_development/: index.html
pr-150/sampling/: index.html
pr-151/: search.json
pr-151/configuration/: index.html
pr-151/umami_int/: index.html
pr-153/: objects.inv  search.json
pr-153/configuration/: index.html
pr-153/reweighting/: index.html
pr-153/sampling/: index.html
pr-154/: search.json
pr-154/setup/: index.html
pr-156/: 404.html  index.html  search.json
pr-156/configuration/: index.html
pr-156/contributing/: index.html
pr-156/docs_development/: index.html
pr-156/reweighting/: index.html
pr-156/run/: index.html
pr-156/sampling/: index.html
pr-156/setup/: index.html
pr-156/umami_int/: index.html
reweighting/: index.html
run/: index.html
sampling/: index.html
search/: search_index.json
setup/: index.html
tests/integration/: test_run.py  test_run_rw.py
tests/integration/fixtures/: test_config_countup.yaml  test_config_countup_upscaled.yaml  test_config_method_none.yaml  test_config_no_resample.yaml  test_config_pdf_auto.yaml  test_config_pdf_upscaled.yaml  test_config_rw.yaml  test_config_rw_custom_name.yaml  test_config_track_selection.yaml  test_conifig.yaml  test_conifig_countup.yaml  test_conifig_pdf_auto.yaml  test_conifig_pdf_upscaled.yaml
tests/unit/: test_logger.py  test_main.py  test_utils.py
tests/unit/classes/: test_components.py  test_plotting_config.py  test_preprocessing_config.py
tests/unit/fixtures/: test_config_pdf_auto_umami.yaml  test_config_pdf_auto_umami_required.yaml  test_config_rw.yaml  test_conifig.yaml  test_conifig_pdf_auto_umami.yaml  test_conifig_pdf_auto_umami_opt_required.yaml  test_flavour_config.yaml
tests/unit/stages/: test_interpolation.py  test_merging.py  test_metadata_injector.py  test_normalisatio.py  test_normalisation.py  test_plotting.py  test_reweight.py  test_rw_merge.py  test_split_containers.py
tests/unit/utils/: test_check_input_samples.py
umami_int/: index.html
upp/: __init__.py  download_and_prepare.py  grid_split.py  logger.py  main.py  types.py
upp/classes/: __init__.py  components.py  plotting_config.py  preprocessing_config.py  region.py  resampling_config.py  reweight_config.py  variable_config.py
upp/configs/: extended_labels.yaml  flavours-r10.yaml  ghost_labels.yaml  lepton-isolation-variables.yaml  lepton-isolation.yaml  metadata.yaml  open-dataset.yaml  plit_electron.yaml  plit_electron_variables.yaml  plit_muon.yaml  plit_muon_variables.yaml  single-b-upgrade.yaml  single-b.yaml  test.yaml  transform.yaml  variables-hits.yaml  variables-upgrade.yaml  variables.yaml  xbb-gn3x.yaml  xbb-rw.yaml  xbb-variables.yaml  xbb.yaml  xtautau.yaml
upp/configs/GN3EPCMV01/: GN3EPCMV01.yaml  GN3V02.yaml  simple-split.yaml  variables-ghost.yaml
upp/configs/GN3V00/: dr.yaml  ghost-highstat.yaml  ghost.yaml  variables-dr.yaml
upp/configs/GN3V01/: GN3V01-RW.yaml  GN3V01.yaml  simple-split.yaml  variables-ghost.yaml
upp/configs/GN3V02/: variables-ghost.yaml
upp/configs/gn3/: dR.yaml  (+7 more)
upp/grid/: download_and_prepare.py  grid_split.py  setup_env.sh
upp/stages/: __init__.py  decompose.py  hist.py  interpolation.py  merging.py  metadata_injector.py  normalisation.py  plot.py  resampling.py  reweight.py  reweight_full.py  rw_merge.py  split_containers.py
upp/utils/: __init__.py  check_input_samples.py  logger.py  path_tools.py  tools.py
(+8 files in other folders)
