[project]
name = "umami-preprocessing"
description = "Preprocessing for jet tagging"
dynamic = ["version"]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "pyyaml-include==1.3",
    "PyYAML==6.0.1",
    "rich==12.6.0",
    "scipy==1.10.1",
    "puma-hep==0.3.0",
    "atlas-ftag-tools==0.2.0",
    "dotmap==1.3.30"
]

[project.optional-dependencies]
dev = [
  "ruff==0.1.6",
  "mypy==1.5.1",
  "pre-commit==3.1.1",
  "pytest==7.2.2",
  "pytest-mock==3.11.1",
  "pytest-cov==4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/umami-hep/umami-preprocessing"

[project.scripts]
preprocess = "upp.main:main"

[tool.setuptools]
packages = ["upp", "upp.classes", "upp.stages"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "upp.__version__"}

[build-system]
requires = ["setuptools>=62"]
build-backend = "setuptools.build_meta"

[tool.ruff]
lint.select = ["I", "E", "W", "F", "B", "UP", "ARG", "SIM", "TID", "RUF", "D2", "D3", "D4"]
lint.ignore = ["D211", "D213", "RUF005"]
line-length = 100

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"  # Accepts: "google", "numpy", or "pep257".

[mypy]
ignore_missing_imports = "True"

[tool.pytest.ini_options]
log_cli_level = "debug"
filterwarnings = ["ignore::DeprecationWarning"]
