[project]
name = "umami-preprocessing"
description = "Preprocessing for jet tagging"
dynamic = ["version"]
license = {text = "MIT"}
readme = "README.md"
requires-python = "<3.12,>=3.8"

dependencies = [
  "atlas-ftag-tools==0.2.15",
  "dotmap==1.3.30",
  "puma-hep==0.4.10",
  "pyyaml-include==1.3",
  "PyYAML>=6.0.1",
  "rich==12.6.0",
  "scipy>=1.15.2",
]

[project.optional-dependencies]
dev = [
  "mypy==1.11.2",
  "pre-commit==3.5.0",
  "pytest-cov>=4.0.0",
  "pytest-mock==3.11.1",
  "pytest>=7.2.2",
  "ruff==0.6.2",
]

[project.urls]
"Homepage" = "https://github.com/umami-hep/umami-preprocessing"

[project.scripts]
preprocess = "upp.main:main"
check_input_samples = "upp.utils.check_input_samples:main"

[tool.setuptools]
packages = ["upp", "upp.classes", "upp.stages", "upp.utils"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "upp.__version__"}

[build-system]
requires = ["setuptools>=62"]
build-backend = "setuptools.build_meta"

[tool.ruff]
lint.select = ["I", "E", "W", "F", "B", "UP", "ARG", "SIM", "TID", "RUF", "D2", "D3", "D4"]
lint.ignore = ["RUF005"]
line-length = 100

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"  # Accepts: "google", "numpy", or "pep257".

[tool.pytest.ini_options]
log_cli_level = "debug"
filterwarnings = ["ignore::DeprecationWarning"]
