[project]
name = "umami-preprocessing"
description = "ATLAS Flavour Tagging Preprocessing - Umami PreProcessing (UPP)"
authors = [{name="Alexander Froch"}]
dynamic = ["version"]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.12"

dependencies = [
  "atlas-ftag-tools==0.2.17",
  "dotmap>=1.3.30",
  "numpy>=2.2.6",
  "puma-hep==0.4.11",
  "pyyaml-include==1.3",
  "PyYAML>=6.0.2",
  "rich>=14.1.0",
  "scipy>=1.15.3",
]

[project.optional-dependencies]
dev = [
  "coverage>=7.10.6",
  "ipykernel>=6.30.1",
  "mypy>=1.18.1",
  "pre-commit>=4.3.0",
  "pydoclint>=0.7.3",
  "pytest_notebook>=0.10.0",
  "pytest-cov>=7.0.0",
  "pytest-randomly>=4.0.1",
  "pytest>=8.4.2",
  "ruff>=0.13.0",
]

[project.urls]
"Homepage" = "https://github.com/umami-hep/umami-preprocessing"
"Issue Tracker" = "https://github.com/umami-hep/umami-preprocessing/issues"

[project.scripts]
preprocess = "upp.main:main"
check_input_samples = "upp.utils.check_input_samples:main"

[tool.setuptools]
packages = ["upp", "upp.classes", "upp.stages", "upp.utils"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "upp.__version__"}

[build-system]
requires = ["setuptools>=62"]
build-backend = "setuptools.build_meta"

[tool.ruff]
lint.select = ["I", "E", "W", "F", "B", "UP", "ARG", "SIM", "TID", "RUF", "D2", "D3", "D4"]
lint.ignore = ["RUF005"]
line-length = 100

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"  # Accepts: "google", "numpy", or "pep257".

[tool.pytest.ini_options]
log_cli_level = "debug"
filterwarnings = ["ignore::DeprecationWarning"]
